--- a/public/css/styleme.css
+++ b/public/css/styleme.css
@@ -9,18 +9,43 @@ body span{
 h1,h3 {
     color: #00bbff;
     font-family: Verdana;
+ }
+
+h1,h3::first-letter{
+    font-size: 1.5em;
 }
 
 #movies  a{
     color: rgba(255, 0, 0, 0.92);
     font-family: "Trebuchet MS";
+    text-decoration: none;
+}
+
+#movies a:hover{
+ text-decoration: underline;
+}
+
+#moviesdetails{
+    list-style-type: none;
+}
+
+#moviesdetails li ul{
+    list-style-type: none;
 }
 
 #movies > ul{
     list-style-type: decimal;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 .neighbours   li >  a{
     color: red;
     font-family: "Trebuchet MS";
 }
+
+/*
+*{
+    color: blue;
+}
+ */
